--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-    "name": "script-template",
+    "name": "script-poke",
     "version": "1.0.0",
     "type": "module",
-    "author": "",
-    "license": "Unlicense",
-    "description": "A Rollup+TypeScript template for a project based on the slicer scripting API.",
+    "author": "run-slicer",
+    "license": "GPL-2.0-only",
+    "description": "A slicer script binding for the poke bytecode normalization and generic deobfuscation library.",
     "scripts": {
         "build": "rollup  --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
         "format": "prettier . --write"
     },
     "dependencies": {
+        "@run-slicer/poke": "^1.0.0",
         "@run-slicer/script": "^0.3.0"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.7",
         "@rollup/plugin-typescript": "^11.1.6",
         "@types/node": "^22.4.0",
